fixed scaling issue on mobile

--- a/css/hacktx.css
+++ b/css/hacktx.css
@@ -2,6 +2,10 @@ h1, h2, h3, h4, h5, p, ul, li , b {
   font-family: "Varela Round", sans-serif;
 }
 
+.logo {
+  max-width: 100%;
+}
+
 .ft_logo {
   width: 6em;
   height: auto;
